demo/13.K8s.Helm/istio-drupal.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: drupal-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - drupal-helm.k8s-9.sa
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: drupal-vs
  namespace: default
spec:
  hosts:
    - drupal-helm.k8s-9.sa
  gateways:
    - drupal-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: my-drupal
            port:
              number: 80
